<resources>
    <string name="app_name">ADA Access</string>
    <string name="section_label">ADA Access | Browse</string>
    <string name="browse_label">ADA Access | Browse</string>
    <string name="calculator_label">ADA Access | Quick Reference</string>
    <string name="favorites_label">ADA Access | Favorites</string>
    <string name="about_label">About</string>
    <string name="contact_label">Contact</string>
    <string name="action_settings">Settings</string>
    <string name="calc_button_title">Quick\nReference</string>
    <string name="QR_parking_label">ADA Access | Parking Reference</string>
    <string name="QR_bathroom_label">ADA Access | Bathroom Reference</string>
    <string name="QR_doors_label">ADA Access | Door Reference</string>
    <string name="QR_hallways_label">ADA Access | Hallways and Routes Reference</string>
    <string name="QR_ramps_label">ADA Access | Ramps and Landings Reference</string>
    <string name="QuickReference_parking_button">Parking Requirements</string>
    <string name="QuickReference_bathroom_button">Bathroom Requirements</string>
    <string name="QuickReference_doors_button">Door Requirements</string>
    <string name="QuickReference_hallways_button">Hallways and Routes</string>
    <string name="QuickReference_ramps_button">Ramps and Landings</string>
    <string name="app_info">       ADA Access, meant for use on Android platforms and created under
        the MIT License, is designed for storing and displaying architectural standards set in place
        by the Americans with Disabilities Act (ADA) most recently updated in 2010. These standards
        include specifications for handicap-accessible construction of dorms, social service centers,
        medical care facilities, etc. These specifications include door widths and ramp angles and
        lengths, among many more specific measurements and requirements. ADA Access makes it easy and
        efficient to access these standards when in the field or when a stationary and/or written
        source is not available.</string>
    <string name="contact_title">Contact the developers via e-mail:</string>
    <string name="contact_email"><a href="mailto:contactadaaccess@gmail.com">ContactADAAccess@gmail.com</a></string>
    <string name="contact_text">     Feel free to contact us with any bug reports, questions, or general feedback. We will reply to your message
        as soon as possible!</string>
    <string name="contact_divider">--------------------------------------------</string>
    <string name="contact_welcome">Visit ABLE South Carolina\'s web site to read more about the company and its purpose!</string>
    <string name="ablesc_link"><a href="http://www.able-sc.org/">http://www.ABLE-SC.org</a></string>
    <string name="testing">This text is only a test.</string>
    <string name="default_line">Default string for place holding only.</string>
    <string name="door_header_1">+  <b>Clearances for Swinging Doors</b></string>
    <string name="door_header_2">+  <b>Clearances for Sliding Doors</b></string>
    <string name="door_swinging_info">
        \u2022 <b>Door openings</b> must provide a clear minimum width of <b>32 inches</b>.
        \n \n
        \u2022 Hinged doors must open 90 degrees.
        \n \n
        \u2022 <b>Thresholds</b> cannot be more than <b>one-half inch</b> high.
        \n \n
        <u>Maneuvering clearances for swinging doors</u>: \n
        \u2022 Approach from front, pull: Minimum <b>60 inches</b> perpendicular to doorway and <b>18 inches</b> parallel to doorway.
        \n \n
        \u2022 Approach from front, push: Minimum <b>48 inches</b> perpendicular to doorway and <b>0 inches</b> parallel to doorway.
        \n \n
        \u2022 Approach from hinge side, pull: Minimum <b>60 inches</b> perpendicular to doorway and <b>36 inches</b> parallel to doorway.
        \n \n
        \u2022 Approach from hinge side, push: Minimum <b>42 inches</b> perpendicular to doorway and <b>22 inches</b> parallel to doorway.
        \n \n
        \u2022 Approach from latch/knob side, pull: Minimum <b>48 inches</b> perpendicular to doorway and <b>24 inches</b> parallel to doorway.
        \n \n
        \u2022 Approach from latch/knob side, push: Minimum <b>42 inches</b> perpendicular to doorway and <b>24 inches</b> parallel to doorway.
        \n \n
        \u2022 See <b>Section 404.2.4.1</b> for more information and graphics.
        \n \n
    </string>
    <string name="door_sliding_info">
        \u2022 <b>Door openings</b> must provide a clear minimum width of <b>32 inches</b>.
        \n \n
        \u2022 Hinged doors must open 90 degrees.
        \n \n
        \u2022 <b>Thresholds</b> cannot be more than <b>one-half inch</b> high.
        \n \n
        <u>Maneuvering clearances for sliding/folding doors</u>: \n
        \u2022 Approach from front:  Minimum <b>48 inches</b> perpendicular to doorway and <b>0 inches</b> parallel to doorway
        \n \n
        \u2022 Approach from side: Minimum <b>42 inches</b> perpendicular to doorway and <b>0 inches</b> parallel to doorway
        \n \n
        \u2022 Approach from hinge side: Minimum <b>42 inches</b> perpendicular to doorway and <b>22 inches</b> parallel to doorway
        \n \n
        \u2022 Approach from latch/knob side: Minimum <b>42 inches</b> perpendicular to doorway and <b>24 inches</b> parallel doorway
        \n \n
        \u2022 See <b>Section 404.2.4.2</b> for more information and graphics.
        \n \n
    </string>
    <string name="bathroom_header_1">+  <b>Wheelchair Accessible Stalls</b></string>
    <string name="bathroom_header_2">+  <b>Ambulatory Accessible Stalls</b></string>
    <string name="bathroom_info_1">
        \u2022 Toilets must be positioned with a wall to the rear and to one side.
        \n \n
        \u2022 The center of the toilet must be <b>16 to 18 inches</b> from the side wall or partition.
        \n \n
        \u2022 Clearance must be <b>60 inches</b> minimum perpendicular from the side wall and <b>56 inches</b> minimum perpendicular from the rear wall for wall hung toilets or <b>59 inches</b> minimum for floor mounted toilets. For children, the stall should be <b>60 inches</b> wide and <b>59 inches</b> deep minimum.
        \n \n
        \u2022 Seat height must be <b>17 inches</b> minimum and <b>19 inches</b> maximum from the floor for adults.
        \n \n
        \u2022 The side wall grab bar must be <b>42 inches</b> long minimum and be placed a maximum of <b>12 inches</b> from the rear wall.
        \n \n
        \u2022 The rear wall grab bar must be <b>36 inches</b> long minimum and extend from the center of the toilet <b>12 inches</b> minimum on one side and <b>24 inches</b> on the other.
        \n \n
        \u2022 Doors can only be in the front or side partition of the stall. They must open outward, be <b>32 or 36 inches</b> wide, be self-closing and a maximum of <b>4 inches</b> from the side wall or partition farthest from the toilet.
        \n \n
        \u2022 See <b>Section 604</b> for more information and graphics.
        \n \n
    </string>
    <string name="bathroom_info_2">
        \u2022 Ambulatory stalls are for people who walk with the assistance of canes or crutches.
        \n \n
        \u2022 Center of the toilet must be <b>17 to 19 inches</b> from the side wall or partition.
        \n \n
        \u2022 Seat height must be <b>11 inches</b> minimum and <b>17 inches</b> maximum from the floor.
        \n \n
        \u2022 Toilets must be positioned with a wall to the rear and on each side.
        \n \n
        \u2022 Stall must have a depth of <b>60 inches</b> minimum (from the back wall to the partition/door) and width of <b>35 inches</b> minimum and <b>37 inches</b> maximum.
        \n \n
        \u2022 Grab bars on each side of the stall. Each bar should measure <b>42 inches</b> long minimum and be located a maximum of <b>12 inches</b> from the rear wall.
        \n \n
        \u2022 Doors must swing outward, be self-closing, and have a <b>32 inch</b> door.
        \n \n
        \u2022 See <b>Section 604</b> for more information and graphics.
        \n \n
    </string>
    <string name="hallway_header_1">+  <b>Hallways and Accessible Routes</b></string>
    <string name="hallway_info_1">
        \u2022 The width of walking surfaces must be <b>36 inches</b> wide, minimum, and clear of obstructions.
        \n \n
        \u2022 At turns of 180 degrees around an element that is less than <b>48 inches</b> wide, the clear width must be <b>42 inches</b> minimum approaching the turn, <b>48 inches</b> minimum at the turn and <b>42 inches</b> minimum leaving the turn.
        \n \n
        \u2022 Accessible routes with clear width of less than <b>60 inches</b>, passing spaces must be provided at intervals of <b>200 feet</b> maximum. Passing spaces must either be a space <b>60 inches</b> minimum by <b>60 inches</b> minimum, or an intersection of two walking surfaces providing a T-shaped space where the arms extend <b>48 inches</b> minimum beyond the intersection.
        \n \n
        \u2022 See <b>Section 403</b> for more information and graphics about walking surfaces and <b>Section 206</b> for more information and graphics on accessible routes.
        \n \n
    </string>
    <string name="ramp_header_1">+  <b>Ramps</b></string>
    <string name="ramp_header_2">+  <b>Landings</b></string>
    <string name="ramp_info_1">
        \u2022 The maximum steepness of a slope is <b>1:12</b>.
        \n \n
        \u2022 Ramps should have the least possible running slope and, when possible, accompany them with stairs.
        \n \n
        \u2022 Cross slope of ramp runs shall not be steeper than <b>1:48</b>.
        \n \n
        \u2022 Clear width of a ramp run and, where handrails are provided, the clear width between handrails must be <b>36 inches</b> minimum.
        \n \n
        \u2022 The rise for any ramp run shall only be <b>30 inches</b> maximum.
        \n \n
        \u2022 See <b>Section 405</b> for more information and graphics on ramps.
        \n \n
    </string>
    <string name="ramp_info_2">
        \u2022 Ramps must have landings at the top and bottom of each ramp run.
        \n \n
        \u2022 <b>Circular</b> landing spaces must have a minimum turning space of <b>60 inches</b> in diameter.
        \n \n
        \u2022 <b>T-shaped</b> turning spaces must exist within square of <b>60 inches</b> by <b>60 inches</b> minimum size. The arms and base of the T must be a minimum of <b>36 inches</b> wide. Each arm must be clear of obstructions for a minimum distance of <b>12 inches</b> in each direction and the base should be clear of obstructions for a minimum distance of <b>24 inches</b>.
        \n \n
        \u2022 See <b>Section 405.7</b> for more information and graphics on landings.
        \n \n
    </string>
    <string name="parking_header_1"><b>Total Number of Parking Spaces</b>:</string>
    <string name="parking_header_2">+  <b>Calculator Instructions</b></string>
    <string name="parking_header_3">+  <b>Additional Information</b></string>
    <string name="calculate">Calculate</string>
    <string name="calc_park_inst">
        Enter the total number of parking spots in the text box. Then, click calculate.
        The calculator computes the minimum number of accessible parking spaces needed based on the total number of parking spaces provided in the parking lot or parking structure.
    </string>
</resources>