<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/parking_header_1"
            android:id="@+id/textTesting"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingLeft="0dp"
            android:paddingTop="10dp"
            android:paddingRight="0dp"
            android:paddingBottom="10dp"
            android:textSize="22sp"
            android:background="#99dcf6"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numberInput"
            android:layout_below="@+id/textTesting"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:id="@+id/button_calculate"
            android:layout_marginTop="50dp"
            android:paddingLeft="70dp"
            android:paddingRight="70dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_below="@+id/OutputText"
            android:layout_alignLeft="@+id/numberInput"
            android:layout_alignStart="@+id/numberInput" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/testing"
            android:id="@+id/OutputText"
            android:visibility="invisible"
            android:layout_marginTop="29dp"
            android:paddingLeft="30dp"
            android:paddingRight="10dp"
            android:layout_below="@+id/numberInput"
            android:paddingTop="10dp"
            android:textSize="19sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/parking_header_2"
            android:id="@+id/titleTextView1"
            android:gravity="left"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/button_calculate"
            android:clickable="true"
            android:onClick="toggle_contents"
            android:textSize="22sp"
            android:padding="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#99dcf6"
            android:layout_marginTop="20dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#A9A9A9"
            android:layout_below="@+id/titleTextView1"
            android:id="@+id/line1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_line"
            android:id="@+id/contentTextView1"
            android:layout_below="@+id/line1"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#DADADA"
            android:layout_below="@+id/contentTextView1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_header_3"
            android:clickable="true"
            android:id="@+id/titleTextView2"
            android:layout_below="@+id/contentTextView1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="toggle_contents2"
            android:textSize="22sp"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="#99dcf6"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#A9A9A9"
            android:layout_below="@+id/titleTextView2"
            android:id="@+id/line2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_line"
            android:id="@+id/contentTextView2"
            android:layout_below="@+id/line2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#DADADA"
            android:layout_below="@+id/contentTextView2"
            android:id="@+id/view" />

    </RelativeLayout>

</ScrollView>