<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="20dp">

    <ImageView
        android:layout_width="215dp"
        android:layout_height="125dp"
        android:id="@+id/ableLogo"
        android:src="@drawable/ablesc"
        android:cropToPadding="false"
        android:contentDescription="able SC logo"
        android:clickable="true"
        android:layout_alignLeft="@+id/buttonBrowse"
        android:layout_alignStart="@+id/buttonBrowse"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/buttonCalculator"
        android:layout_alignEnd="@+id/buttonCalculator"
        android:scaleType="centerInside" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Browse"
        android:id="@+id/buttonBrowse"
        android:minWidth="135dp"
        android:maxWidth="135dp"
        android:minHeight="135dp"
        android:maxHeight="135dp"
        android:onClick="show"
        android:background="#99dcf6"
        android:textColor="#393939"
        android:layout_toStartOf="@+id/buttonCalculator"
        android:layout_below="@+id/ableLogo"
        android:layout_toLeftOf="@+id/centerPoint"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calc_button_title"
        android:id="@+id/buttonCalculator"
        android:minWidth="135dp"
        android:maxWidth="135dp"
        android:minHeight="135dp"
        android:maxHeight="135dp"
        android:onClick="show"
        android:background="#269ecc"
        android:textColor="#393939"
        android:layout_below="@+id/ableLogo"
        android:layout_toRightOf="@+id/centerPoint"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Favorites"
        android:id="@+id/buttonFavorites"
        android:minWidth="135dp"
        android:maxWidth="135dp"
        android:minHeight="135dp"
        android:maxHeight="135dp"
        android:layout_below="@+id/buttonBrowse"
        android:layout_alignLeft="@+id/buttonBrowse"
        android:layout_alignStart="@+id/buttonBrowse"
        android:onClick="show"
        android:background="#269ecc"
        android:textColor="#393939"
        android:layout_marginTop="8dp"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2010 \nDocument"
        android:id="@+id/buttonDocument"
        android:layout_toRightOf="@+id/buttonFavorites"
        android:minWidth="135dp"
        android:maxWidth="135dp"
        android:minHeight="135dp"
        android:maxHeight="135dp"
        android:layout_alignTop="@+id/buttonFavorites"
        android:layout_alignLeft="@+id/buttonCalculator"
        android:layout_alignStart="@+id/buttonCalculator"
        android:onClick="show"
        android:background="#99dcf6"
        android:textColor="#393939"
        android:clickable="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centerPoint"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_label"
        android:id="@+id/buttonAbout"
        android:layout_below="@+id/buttonFavorites"
        android:minWidth="135dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:maxWidth="135dp"
        android:layout_alignStart="@+id/buttonFavorites"
        android:layout_alignParentLeft="false"
        android:layout_alignLeft="@+id/buttonFavorites"
        android:background="#ffef6d" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_label"
        android:id="@+id/buttonContact"
        android:minWidth="135dp"
        android:layout_alignTop="@+id/buttonAbout"
        android:layout_alignLeft="@+id/buttonDocument"
        android:layout_alignStart="@+id/buttonDocument"
        android:clickable="true"
        android:layout_toRightOf="@+id/buttonDocument"
        android:layout_below="@+id/buttonAbout"
        android:layout_alignRight="@+id/buttonDocument"
        android:layout_toLeftOf="@+id/buttonDocument"
        android:maxWidth="135dp"
        android:background="#ffef6d" />

</RelativeLayout>